(executable
 (name example)
 (modules example)
 (libraries core stdio feather feather_async)
 (preprocess (pps ppx_let ppx_expect ppx_string)))

(library
 (name feather_async)
 (public_name feather_async)
 (inline_tests)
 (modules feather_async)
 (libraries core async feather)
 (preprocess (pps ppx_let ppx_expect ppx_string)))
